# MarineDetect

./: .gitignore  Readme.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  fix.py  main.py
backend/utils/: marine.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: VideoUpload.tsx  page.tsx
